--- a/public/css/style.css
+++ b/public/css/style.css
@@ -387,8 +387,30 @@ text-align: center;
 }
 
 
+@media only screen and (max-width:767px){
 
-
-
-
-
+    #nav {
+        width: 100%;
+        height: 110px;
+        display: grid;
+        grid-template: "logo cont" /700px;
+        border-bottom: 1px solid rgba(128, 128, 128, 0.467);
+    }
+    #logo-nav {
+        grid-area: logo;
+        display: flex;
+        justify-content: start;
+    }
+    
+    #logo-nav img {
+        width: 180px;
+    }
+    #img-top {
+        width: 100%;
+        margin-top: 1em;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+}
