--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,17 +11,17 @@
     border-bottom: 1px solid rgba(128, 128, 128, 0.467);
 }
 
-#logo-nav {
+.logo-nav {
     grid-area: logo;
     display: flex;
     justify-content: center;
 }
 
-#logo-nav img {
+.logo-nav img {
     width: 180px;
 }
 
-#cont-nav {
+.cont-nav {
     grid-area: cont;
     display: flex;
     align-items: center;
@@ -29,7 +29,7 @@
     margin-right: 200px;
 }
 
-#cont-nav a {
+.cont-nav a {
     color: black;
     text-decoration: none;
     padding: 1em;
@@ -37,11 +37,11 @@
     font-family: sans-serif;
 }
 
-#cont-nav a:hover {
+.cont-nav a:hover {
     color: brown;
 }
 
-#img-top {
+.img-top {
     width: 100%;
     margin-top: 1em;
     display: flex;
@@ -49,11 +49,11 @@
     align-items: center;
 }
 
-#img-top img {
+.img-top img {
     width: 1200px;
 }
 
-#element-text-1{
+.element-text-1{
     width: 100%;
     height: 40px;
     margin-top: 10em;
@@ -61,7 +61,7 @@
     align-items: center;
     justify-content: center;
 }
-#element-text-1 p{
+.element-text-1 p{
     background: orange;
     width: 400px;
     height: 50px;
@@ -71,18 +71,18 @@
     font-family: sans-serif;
     color: white;
 }
-#cont-meets{
+.cont-meets{
     width: 1200px;
     margin: 2em auto;
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
 }
-#meet1{
+.meet1{
     width: 250px;
     margin: 1em;
 }
-#meet1 img{
+.meet1 img{
     width: 250px;
     height: 250px;
     border: 1px solid gray;
@@ -91,17 +91,17 @@
     border-radius: 50%;
     background-size: 100% auto;
 }
-#item-title{
+.item-title{
     font-family: sans-serif;
     text-align: center;
     font-size: 1.2em;
     color: brown;
 }
-#item-cont{
+.item-cont{
     font-family: sans-serif;
     padding: 0.5em;
 }
-#dates-conf{
+.dates-conf{
    width: 98;
    height: 100px;
    margin: 2em;
@@ -109,7 +109,7 @@
    grid-template: "mails dates" /400px 800px;
    justify-content: center;
 }
-#dat-1{
+.dat-1{
     grid-area: mails;
     background: rgb(195, 195, 195);
     display: flex;
@@ -117,20 +117,20 @@
     justify-content: center;
     align-items: center;
 }
-#dat-1 p{
+.dat-1 p{
     font-size: 1.2em;
     font-family: sans-serif;
     color:rgb(1, 1, 52);
     margin: 0.3em;
 }
-#dat-2{
+.dat-2{
     grid-area: dates;
     background: rgb(1, 1, 52);
     display: flex;
     flex-direction: row;
     
 }
-#sub{
+.sub{
     
     width: 266px;
     height: 100px;
@@ -140,7 +140,7 @@
     flex-direction: column;
     align-items: center;
 }
-#sub-t{
+.sub-t{
     color: white;
     font-family: sans-serif;
     font-size: 1.5em;
@@ -151,7 +151,7 @@
     background: rgb(248 158 50);
     
 }
-#sub-t2{
+.sub-t2{
     color: white;
     font-family: sans-serif;
     font-size: 1.3em;
@@ -164,7 +164,7 @@
 /* REGISTER BUTTON */
 
 
-#inscription-cont a:hover{
+.inscription-cont a:hover{
     
     background: rgb(189, 189, 189);
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, brown 0%, rgb(153, 153, 153)48%, rgb(23, 201, 0) 100%);
@@ -290,28 +290,28 @@
 
 
 /* TEXT */
-#text1{
+.text1{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     font-family: sans-serif;
 }
-#objetives-title{
+.objetives-title{
     margin-top: 10em;
     width: 1000px;
 }
-#text1 p{
+.text1 p{
     font-size: 2em;
     margin: 80px 200px 0 200px;
     color: rgb(60, 60, 60);
 }
-#text1 p span{
+.text1 p span{
     font-weight: bold;
     color: brown;
 
 }
-#text1 h1{
+.text1 h1{
     margin-top: 8em;
     color: rgb(60, 60, 60);
 }
@@ -330,23 +330,23 @@ margin: 0.2em;
 text-align: center;
 }
 
-#text1 li ul{
+.text1 li ul{
     font-size: 2em;
     margin: 30px 200px 0 200px;
     color: rgb(60, 60, 60);
 
 }
-#objetives{
+.objetives{
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-#img-title-bottom{
+.img-title-bottom{
     margin-top: 10em;
     width: 1000px;
 }
-#img-title-bottom-2{
+.img-title-bottom-2{
     margin-top: 12em;
     width: 1000px;
 }
@@ -354,7 +354,7 @@ text-align: center;
 
 /* OBJETIVPEOPLE */
 
-#objetive-people{
+.objetive-people{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -362,7 +362,7 @@ text-align: center;
     font-family: sans-serif;
 }
 
-#objetive-people p{
+.objetive-people p{
 
     font-size: 4em;
     text-align: center;
@@ -370,47 +370,98 @@ text-align: center;
     color: rgb(210, 70, 0);
 
 }
-#ejes-tematicos-cont{
+.ejes-tematicos-cont{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     font-family: sans-serif;
 }
-#ejes-tematicos-cont div{
+.ejes-tematicos-cont div{
     font-size: 1.3em;
     margin: 80px 140px 0 140px;
     color: rgb(60, 60, 60);
 }
-#ejes-tematicos-cont div p span{
+.ejes-tematicos-cont div p span{
     font-weight: bold;
 }
 
 
-@media only screen and (max-width:767px){
+@media only screen and (max-width:600px){
 
     #nav {
         width: 100%;
         height: 110px;
         display: grid;
-        grid-template: "logo cont" /700px;
+        grid-template: "logo cont" /750px 1fr;
         border-bottom: 1px solid rgba(128, 128, 128, 0.467);
     }
-    #logo-nav {
+    .logo-nav {
         grid-area: logo;
         display: flex;
         justify-content: start;
     }
     
-    #logo-nav img {
+    .logo-nav img {
         width: 180px;
     }
-    #img-top {
+    .img-top {
         width: 100%;
         margin-top: 1em;
         display: flex;
         justify-content: center;
         align-items: center;
     }
+    .text-box {
+        margin-left: 44vw;
+         margin-top: 42vh;
+         width: 300px;
+         position: fixed;
+         right: 10em;
+         bottom: 5em;
+         font-family: sans-serif;
+    }
+    .text1{
+        width:  100%;
+        display: block;
+    }
+    .text1 li ul{
+        font-size: 1.5em;
+        margin: 30px 50px 0 50px;
+        color: rgb(60, 60, 60);
     
+    }
+    .text1 p{
+        font-size: 2em;
+        margin: 80px 50px 0 50px;
+        color: rgb(60, 60, 60);
+    }
+    .cont-meets{
+    width: 1000px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    }
+    .meet1{
+        width: 100%;
+        margin: 1em;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border-bottom: 1px solid gray;
+    }
+    .meet1 img{
+        width: 500px;
+        height: auto;
+        border: 1px solid gray;
+        background-repeat: no-repeat;
+        background-position: 50%;
+        border-radius: 50%;
+        background-size: 100% auto;
+    }
+    .meet1 p{
+        font-size: 2em;
+        
+    }
 }
