--- a/public/css/style.css
+++ b/public/css/style.css
@@ -393,8 +393,28 @@ text-align: center;
         width: 100%;
         height: 110px;
         display: grid;
-        grid-template: "logo cont" /740px;
+        grid-template: "logo cont" /500px 500px;
         border-bottom: 1px solid rgba(128, 128, 128, 0.467);
+    }
+    .cont-nav {
+        grid-area: cont;
+        margin-right:0;
+        display: flex;
+        flex-direction: row;
+        justify-content:flex-end;
+        
+    }
+    
+    .cont-nav a {
+        color: black;
+        text-decoration: none;
+        padding: 1em;
+        font-size: 1.2em;
+        font-family: sans-serif;
+    }
+    
+    .cont-nav a:hover {
+        color: brown;
     }
     .logo-nav {
         grid-area: logo;
@@ -493,8 +513,8 @@ text-align: center;
      font-family: sans-serif;
 }
 .text-box a{
-    line-height: 1.5em;
-    font-size: 2em;
+    line-height: 2.8em;
+    font-size: 2.2em;
     font-family: sans-serif;
     text-align: center;
 }
@@ -508,8 +528,8 @@ text-align: center;
 }
 .btn:link, .btn:visited {
     border-radius: 10px;
-    width: 500px;
-    right: 1em;
+    width: 900px;
+    right: 0.4em;
 }
 
 
@@ -602,7 +622,7 @@ text-align: center;
 }
 .ejes-tematicos-cont div{
     font-size: 1.3em;
-    margin: 80px 30px 100px 30px;
+    margin: 80px 30px 140px 30px;
     color: rgb(60, 60, 60);
 }
 .ejes-tematicos-cont div p span{
@@ -615,6 +635,6 @@ text-align: center;
 }
 .img-title-bottom-2{
     margin-top: 12em;
-    width: 500px;
+    width: 700px;
 }
 }
