--- a/public/css/style.css
+++ b/public/css/style.css
@@ -391,9 +391,9 @@ text-align: center;
 
     #nav {
         width: 100%;
-        height: 110px;
+        height: 50px;
         display: grid;
-        grid-template: "logo cont" /500px 500px;
+        grid-template: "logo cont" /150px 1fr;
         border-bottom: 1px solid rgba(128, 128, 128, 0.467);
     }
     .cont-nav {
@@ -409,7 +409,7 @@ text-align: center;
         color: black;
         text-decoration: none;
         padding: 1em;
-        font-size: 1.2em;
+        font-size: 0.5em;
         font-family: sans-serif;
     }
     
@@ -423,7 +423,8 @@ text-align: center;
     }
     
     .logo-nav img {
-        width: 180px;
+        width: 60px;
+        height: 50px;
     }
     .img-top {
         width: 100%;
@@ -431,17 +432,26 @@ text-align: center;
         display: block;
     }
     .img-top img {
-        width: 1000px;
+        width: 100%;
+    }
+    .element-text-1{
+        width: 200px;
+        height: 40px;
+    }
+    .element-text-1 p{
+        font-size: 1em;
+        height: 20px;
+        text-align: end;
+        padding-right: 1em;
     }
     .cont-meets{
-    width: 1000px;
+    width: 300px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     }
     .meet1{
         width: 100%;
-        margin: 1em;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -449,7 +459,7 @@ text-align: center;
         border-bottom: 1px solid gray;
     }
     .meet1 img{
-        width: 500px;
+        width: 200px;
         height: auto;
         border: 1px solid gray;
         background-repeat: no-repeat;
@@ -458,20 +468,26 @@ text-align: center;
         background-size: 100% auto;
     }
     .meet1 p{
-        font-size: 2em;
+        margin-top: 1em;
+        font-size: 1em;
         
     }
     .dates-conf{
         flex-direction: column;
     }
     .dates-conf{
-   width: 1000px;
-   height: 200px;
-   display: grid;
-   grid-template: "mails" 1fr "dates" 1fr;
+        margin: 0;
+        width: 100%;
+        height: 150px;
+        display: grid;
+        grid-template: "mails" 1fr "dates" 120px;
+        z-index: 10;
+}
+.dat-1{
+    width: 300px;
 }
 .dat-1 p{
-    font-size: 1.5em;
+    font-size: .5em;
     font-family: sans-serif;
     color:rgb(1, 1, 52);
     margin: 0.3em;
@@ -485,36 +501,55 @@ text-align: center;
 }
 .sub{
     
-    width: 340px;
-    height: 210px;
+    width: 100px;
+    height: 100px;
     border: none;
-    font-size: 1.5em;
+    font-size: .8em;
     align-items: center;
     
 }
 .sub-t{
-    margin: 0;
-    width: 340px;
+   
+    width: 100px;
     height: 60px;
+    font-size: 1.2em;
+    z-index: 10;
    
     
 }
 .sub-t2{
-    
-    width: 300px;
-    height: 80px;
+    font-size: 1em;
+    text-align: center;
+    width: 100px;
+    height:200px;
 }
+
+
+.sub1{
+    display: flex;
+    color: white;
+    flex-direction: column  ;
+    flex-wrap: row wrap;
+    font-family: sans-serif;
+}
+.sub1 div{
+margin: 0.2em;
+text-align: center;
+}
+
+
+
 .text-box {
     margin-left: 44vw;
      margin-top: 42vh;
-     width: 300px;
+     width: 100%;
      position: fixed;
-    
      font-family: sans-serif;
 }
 .text-box a{
-    line-height: 2.8em;
-    font-size: 2.2em;
+    width: 100%;
+    line-height: 2em;
+    font-size: 1em;
     font-family: sans-serif;
     text-align: center;
 }
@@ -523,42 +558,26 @@ text-align: center;
     animation-fill-mode: backwards;
 }
 .btn::after {
+    width: 100%;
     border-radius: 10px;
     
 }
 .btn:link, .btn:visited {
     border-radius: 10px;
-    width: 900px;
-    right: 0.4em;
+    width: 100%;
+    width: 250px;
+
+    
 }
 
 
-
-
-
-.text-box {
-    margin-left: 44vw;
-	 margin-top: 42vh;
-     width: 300px;
-     position: fixed;
-     right: 2em;
-     bottom: 10em;
-     font-family: sans-serif;
-}
 
 .btn-white {
     background-color: rgba(165, 42, 42, 0.496);
     color: #ffffff;
-    height: 100px;
+    height: 30px;
+    
 }
-
-
-
-
-
-
-
-
 
 
 
@@ -568,35 +587,38 @@ text-align: center;
 
 
 .text1{
-    width:  1000px;
+    width: 300px;
     display: block;
-    padding-bottom: 5em;
+    margin-left: 1em;
+    padding-bottom: 1em;
     border-bottom: 1px solid gray;
 }
 .text1 h1{
-    margin-left: 1.5em;
+   margin-top: 2em;
     font-size: 2.2em;
 }
-.text1 li ul{
-    font-size: 1.5em;
-    margin: 30px 50px 0 50px;
-    color: rgb(60, 60, 60);
-
-}
 .text1 p{
-    font-size: 2em;
-    margin: 80px 50px 80px 50px;
+    font-size: .8em;
+    margin: 40px 10px 80px 20px;
     color: rgb(60, 60, 60);
     
 }
+
+.text1 ul li{
+    font-size: .8em;
+    margin: 30px 20px 0 30px;
+    color: rgb(60, 60, 60);
+
+}
 .objetives-title{
-    width: 800px;
+    width: 290px;
     display: block;
     margin: 2em auto;
 }
 
 .objetive-people{
-    width: 1000px;
+    width: 300px;
+    margin-left: 1em;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -605,15 +627,14 @@ text-align: center;
 }
 
 .objetive-people p{
-
-    font-size: 4em;
+    font-size: 1.2em;
     text-align: center;
-    margin: 100px 0 0 0;
+    margin: 1em auto;
     color: rgb(210, 70, 0);
 
 }
 .ejes-tematicos-cont{
-    width: 1000px;
+    width: 300px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -621,8 +642,8 @@ text-align: center;
     font-family: sans-serif;
 }
 .ejes-tematicos-cont div{
-    font-size: 1.3em;
-    margin: 80px 30px 140px 30px;
+    font-size: .8em;
+    margin: 10px 20px 50px 20px;
     color: rgb(60, 60, 60);
 }
 .ejes-tematicos-cont div p span{
@@ -630,11 +651,13 @@ text-align: center;
 }
 
 .img-title-bottom{
-    margin-top: 10em;
-    width: 900px;
+    margin-top: 5em;
+    width: 280px;
 }
 .img-title-bottom-2{
-    margin-top: 12em;
-    width: 700px;
+    margin-top: 5em;
+    margin-left: 1em;
+    width: 280px;
 }
+
 }
