--- a/public/css/style.css
+++ b/public/css/style.css
@@ -501,7 +501,7 @@ text-align: center;
 }
 .sub{
     
-    width: 100px;
+    width: 166px;
     height: 100px;
     border: none;
     font-size: .8em;
@@ -510,7 +510,7 @@ text-align: center;
 }
 .sub-t{
    
-    width: 100px;
+    width: 166px;
     height: 60px;
     font-size: 1.2em;
     z-index: 10;
@@ -520,7 +520,7 @@ text-align: center;
 .sub-t2{
     font-size: 1em;
     text-align: center;
-    width: 100px;
+    width: 166px;
     height:200px;
 }
 
@@ -598,20 +598,20 @@ text-align: center;
     font-size: 2.2em;
 }
 .text1 p{
-    font-size: .8em;
+    font-size: 1em;
     margin: 40px 10px 80px 20px;
     color: rgb(60, 60, 60);
     
 }
 
 .text1 ul li{
-    font-size: .8em;
+    font-size: 1em;
     margin: 30px 20px 0 30px;
     color: rgb(60, 60, 60);
 
 }
 .objetives-title{
-    width: 290px;
+    width: 480px;
     display: block;
     margin: 2em auto;
 }
@@ -642,7 +642,7 @@ text-align: center;
     font-family: sans-serif;
 }
 .ejes-tematicos-cont div{
-    font-size: .8em;
+    font-size: 1em;
     margin: 10px 20px 50px 20px;
     color: rgb(60, 60, 60);
 }
@@ -652,12 +652,12 @@ text-align: center;
 
 .img-title-bottom{
     margin-top: 5em;
-    width: 280px;
+    width: 480px;
 }
 .img-title-bottom-2{
     margin-top: 5em;
     margin-left: 1em;
-    width: 280px;
+    width: 480px;
 }
 
 }
