--- a/public/css/style.css
+++ b/public/css/style.css
@@ -445,8 +445,8 @@ text-align: center;
         padding-right: 1em;
     }
     .cont-meets{
-    width: 500px;
-    flex-direction: column;
+    width:100%;
+    flex-direction:unset;
     justify-content: center;
     align-items: center;
     }
@@ -501,7 +501,7 @@ text-align: center;
 }
 .sub{
     
-    width: 166px;
+    width: 150px;
     height: 100px;
     border: none;
     font-size: .8em;
@@ -510,7 +510,7 @@ text-align: center;
 }
 .sub-t{
    
-    width: 166px;
+    width: 150px;
     height: 60px;
     font-size: 1.2em;
     z-index: 10;
@@ -520,7 +520,7 @@ text-align: center;
 .sub-t2{
     font-size: 1em;
     text-align: center;
-    width: 166px;
+    width: 150px;
     height:200px;
 }
 
@@ -540,7 +540,6 @@ text-align: center;
 
 
 .text-box {
-     margin-top: 42vh;
      width: 100%;
      position: fixed;
      font-family: sans-serif;
