--- a/public/css/style.css
+++ b/public/css/style.css
@@ -563,12 +563,12 @@ text-align: center;
 .btn::after {
     margin: 0;
     width: 95%;
-    border-radius: 10px;
+    border-radius: 0;
     
 }
 .btn:link, .btn:visited {
     margin: 0;
-    border-radius: 10px;
+    border-radius: 0px;
     width: 95%;
 
     
