--- a/public/css/style.css
+++ b/public/css/style.css
@@ -544,8 +544,8 @@ text-align: center;
      position: fixed;
      font-family: sans-serif;
      margin: 0;
-     left:0;
-     right:0;
+     left: 0;
+     right:5em;
 
      }
 
@@ -555,6 +555,7 @@ text-align: center;
     font-size: 1em;
     font-family: sans-serif;
     text-align: center;
+    margin: 0;
 }
 .btn-animated {
     animation: moveInBottom 5s ease-out;
